@@ -1,0 +1,4 @@
+type foo =
+    Foo: [> `Bla ] as 'b ) * 'b -> foo;;
+type foo =
+    Foo: 'b * 'b -> foo constraint 'b = [> `Bla ];;
